fixed alignment bug when sorting chevron appears

--- a/packages/fluent-controls/src/components/List/GenericManagementList.scss
+++ b/packages/fluent-controls/src/components/List/GenericManagementList.scss
@@ -52,6 +52,7 @@ $header-line-height: 4*$grid;
             
             padding-top: 2*$gutter;
             padding-right: 5*$gutter;
+            vertical-align: bottom;            
 
             white-space: nowrap;
             
